# django-custom-user

./: db.sqlite3  pyproject.toml
project/: forms.py  settings.py  urls.py  views.py
project/templates/: home.html
user/: admin.py
user/migrations/: 0001_initial.py
